# aether-lang

./: .clang-format  .gitignore  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  VERSIONS.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: xyz
src/: main.cpp
src/AST/: ast.cpp  ast.hpp
src/Builtins/: builtin.hpp  builtins.cpp  builtins.hpp
src/Evaluator/: evaluator.cpp  evaluator.hpp
src/Lexer/: lexer.cpp  lexer.hpp  token.hpp
src/Parser/: parser.cpp  parser.hpp
src/Runtime/: environment.cpp  environment.hpp  value.hpp
src/Utils/: arena.cpp  arena.hpp  error.cpp  error.hpp  io.cpp  io.hpp
src/compiler/: CMakeLists.txt  Compiler.cpp  Compiler.hpp
src/interpreter/: CMakeLists.txt  Environment.cpp  Environment.hpp  Interpreter.cpp  Interpreter.hpp
src/shared/: CMakeLists.txt
src/shared/builtins/: Builtins.cpp  Builtins.hpp
src/shared/lexer/: Lexer.cpp  Lexer.hpp  Token.hpp
src/shared/parser/: Parser.cpp  Parser.hpp
src/vm/: CMakeLists.txt  Chunk.cpp  Chunk.hpp  VM.cpp  VM.hpp
tests/: CMakeLists.txt  InterpreterTest.cpp  LexerTest.cpp  ParserTest.cpp  VMTest.cpp
